plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.4'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'nsu'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starters:2.2.13.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-security:3.0.8'
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.8'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.0.8'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.8'
    implementation 'jakarta.mail:jakarta.mail-api:2.1.2'
    implementation 'org.modelmapper:modelmapper:3.1.0'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
    implementation 'org.flywaydb:flyway-mysql:9.22.3'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
